--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -148,6 +148,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 20px;
 }
 
+h1,h2,h3{
+    letter-spacing: 0.2em;
+}
+
 a {
     color: #d0a852;
 }
@@ -5752,6 +5756,13 @@ form.wpcf7-form .wpcf7-text{
 form.wpcf7-form .wpcf7-textarea{
     width: 100%!important;
     height: 80px;
+}
+form.wpcf7-form p{
+    margin-bottom: 10px;
+}
+form.wpcf7-form p.wrap-submit{
+    margin-top: 60px;
+    text-align: center;
 }
 /* ==============================
    14. Main content
