--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -19,5 +19,150 @@
  * Title:   SCSS VARIABLES
  * Author:  http://themeforest.net/user/Kite-Themes
 ------------------------------------------------------------- */
+/* ==============================
+   1. Common styles
+   ============================== */
+/*
+ * 1.1 Common styles
+ */
+::-moz-selection {
+  color: #fff;
+  background: #000000; }
+
+::selection {
+  color: #fff;
+  background: #000000; }
+
+html, body {
+  -webkit-font-smoothing: antialiased;
+  overflow-x: hidden; }
+
+iframe {
+  border: none; }
+
+a:hover {
+  -webkit-transition: all 0.3s ease 0s;
+  -khtml-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -ms-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s; }
+a:focus, a:active {
+  -webkit-outline: none;
+  -khtml-outline: none;
+  -moz-outline: none;
+  -ms-outline: none;
+  -o-outline: none;
+  outline: none; }
+
+img:not([draggable]), embed, object, video {
+  max-width: 100%;
+  height: auto; }
+
+p {
+  margin-bottom: 30px; }
+
+.appear-animate .wow {
+  visibility: hidden; }
+
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0; }
+  .row.no-gutters > [class^="col-"], .row.no-gutters > [class*=" col-"] {
+    padding-right: 0;
+    padding-left: 0; }
+
+.breadcrumb {
+  margin: 0 0 35px;
+  padding: 0;
+  background: none;
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0; }
+  .breadcrumb a {
+    color: #999999; }
+
+.page-header {
+  border: none;
+  margin: 0;
+  padding: 0; }
+  .page-header h1 {
+    margin: 0;
+    font-size: 18px; }
+  .page-header .breadcrumb {
+    margin: 0; }
+
+/*
+ * 1.2. Helper CSS
+ */
+.kt-table {
+  display: table;
+  width: 100%;
+  height: 100%; }
+  .kt-table .kt-col {
+    display: table-cell;
+    vertical-align: middle; }
+
+.round {
+  -webkit-border-radius: 2px;
+  -khtml-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px; }
+
+.circle {
+  -webkit-border-radius: 100%;
+  -khtml-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%; }
+
+.square {
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0; }
+
+.screen-reader-text {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute !important;
+  width: 1px; }
+
+.kt-column-bg {
+  -webkit-background-size: cover;
+  -khtml-background-size: cover;
+  -moz-background-size: cover;
+  -ms-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat; }
+
+.letter-spacing {
+  letter-spacing: 0.2em; }
+
+.text-nomal {
+  text-transform: none; }
+
+.white {
+  color: #fff !important; }
+
+.black {
+  color: #111 !important; }
+
+.gray {
+  color: #999999 !important; }
+
+.bg-gray {
+  background: #f6f6f6; }
 
 /*# sourceMappingURL=style.css.map */
