--- a/wp-content/themes/wingman/framework/extensions/ReduxCore/inc/fields/link_color/field_link_color.css
+++ b/wp-content/themes/wingman/framework/extensions/ReduxCore/inc/fields/link_color/field_link_color.css
@@ -1,1 +1,6 @@
-.redux-container-link_color .linkColor{display:inline-block;padding-right:10px;padding-bottom:7px}
+.redux-container-link_color .linkColor {
+  display: inline-block;
+  padding-right: 10px;
+  padding-bottom: 7px; }
+
+/*# sourceMappingURL=field_link_color.css.map */
