--- a/wp-content/themes/wingman/framework/extensions/meta-box-tabs/tabs.css
+++ b/wp-content/themes/wingman/framework/extensions/meta-box-tabs/tabs.css
@@ -1,127 +1,108 @@
 /* General */
 .rwmb-tab-nav {
-	margin-bottom: 0;
+  margin-bottom: -1px;
 }
 .rwmb-tab-nav li {
-	margin: 0;
-	display: inline-block;
+  margin: 0;
+  display: inline-block;
 }
-
+.rwmb-tab-nav .rwmb-tab-active {
+  border: 1px solid #dfdfdf;
+  border-bottom-color: transparent;
+  background: #fdfdfd;
+}
 .rwmb-tab-nav a {
-	border: 1px solid #ccc;
-	display: block;
-	font-size: 13px;
-	line-height: 24px;
-	margin-right: -1px;
-	margin-bottom: -1px;
-	margin-top: 0;
-	padding: 6px 16px;
-	text-decoration: none;
-	color: #23282d;
+  display: block;
+  padding: 3px 5px 5px;
+  text-decoration: none;
 }
-.rwmb-tab-nav a:active,
-.rwmb-tab-nav a:focus{
-	outline: none;
-	box-shadow: 0 0 0;
+.rwmb-tab-nav a:active {
+  outline: none;
 }
-.rwmb-tab-nav .rwmb-tab-active a{
-	border-bottom-color: transparent;
-	background: #FFFFFF;
-}
-
 .rwmb-tab-nav i,
 .rwmb-tab-nav img {
-	vertical-align: middle;
-	margin-right: .3em;
+  vertical-align: middle;
+  margin-right: .3em;
 }
-
-
 .rwmb-tab-nav i {
-	width: 16px;
-	height: 16px;
-	font-size: 16px;
+  width: 16px;
+  height: 16px;
+  font-size: 16px;
 }
 .rwmb-tab-nav img {
-	width: 12px;
-	height: 12px;
-	display: inline-block;
+  width: 12px;
+  height: 12px;
+  display: inline-block;
 }
 .rwmb-tab-active a {
-	color: #333;
+  color: #333;
 }
-.rwmb-tab-panels {
-	padding: 25px 15px 20px;
-	border: 1px solid #cccccc;
-	background: #FFFFFF;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-}
-.rwmb-tab-panel{
-	display: none;
+.rwmb-tab-panel {
+  padding: 10px 5px 0;
+  border: solid 1px #dfdfdf;
+  background: #fdfdfd;
+  display: none;
 }
 /* Box style */
 .rwmb-tabs-box li {
-	background: #ebebeb;
-	border: 1px solid #dedede;
-	margin-right: 5px;
+  background: #ebebeb;
+  border: 1px solid #dedede;
+  margin-right: 5px;
 }
 .rwmb-tabs-box li:hover {
-	background: #fff;
+  background: #fff;
 }
 .rwmb-tabs-box a {
-	color: #777;
+  color: #777;
 }
 .rwmb-tabs-box .rwmb-tab-active,
 .rwmb-tabs-box .rwmb-tab-active:hover {
-	background: #f5f5f5;
+  background: #f5f5f5;
 }
 .rwmb-tabs-box .rwmb-tab-active a {
-	color: #555;
+  color: #555;
 }
 .rwmb-tabs-box .rwmb-tab-panel {
-	background: #f5f5f5;
-	border: solid 1px #dedede;
+  background: #f5f5f5;
+  border: solid 1px #dedede;
 }
 /* Left tabs style */
 .rwmb-tabs-left {
-	overflow: hidden;
-	margin: -20px -12px -12px;
+  overflow: hidden;
+  margin: -6px -12px -12px;
 }
 .rwmb-tabs-left .rwmb-tab-nav {
-	float: left;
-	margin: 0 -1px 0 0;
-	background: #fdfdfd;
-	border-right: 1px solid #dfdfdf;
-	z-index: 9;
+  float: left;
+  margin: 0 -1px 0 0;
+  background: #fdfdfd;
+  border-right: 1px solid #dfdfdf;
+  z-index: 9;
 }
 .rwmb-tabs-left .rwmb-tab-nav li {
-	display: block;
+  display: block;
 }
 .rwmb-tabs-left .rwmb-tab-nav li:first-child {
-	border-top: none;
+  border-top: none;
 }
 .rwmb-tabs-left .rwmb-tab-nav a {
-	padding: 10px 20px 10px 10px;
-}
-.rwmb-tabs-left .rwmb-tab-nav a:focus{
-	box-shadow: 0 0 0;
+  padding: 5px 20px 8px 10px;
 }
 .rwmb-tabs-left .rwmb-tab-active {
-	border: 1px solid #dfdfdf;
-	border-right-color: #fdfdfd;
-	border-left-width: 2px;
-	border-left-color: #2ea2cc;
-	box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02), 0 1px 0 rgba(0, 0, 0, 0.02);
-	position: relative;
-	right: -1px;
+  border: 1px solid #dfdfdf;
+  border-right-color: #fdfdfd;
+  border-left-width: 2px;
+  border-left-color: #2ea2cc;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02), 0 1px 0 rgba(0, 0, 0, 0.02);
+  position: relative;
+  right: -1px;
 }
 .rwmb-tabs-left .rwmb-tab-panels {
-	overflow: auto;
-	border-left: 1px solid #dfdfdf;
-	z-index: 1;
-	margin-top: 10px;
+  overflow: auto;
+  border-left: 1px solid #dfdfdf;
+  z-index: 1;
 }
 .rwmb-tabs-left .rwmb-tab-panel {
-	padding: 3px 20px 0;
-	background: transparent;
-	border: none;
+  padding: 3px 20px 0;
+  background: transparent;
+  border: none;
 }
