--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -165,4 +165,341 @@ p {
 .bg-gray {
   background: #f6f6f6; }
 
+/* ==============================
+   3. Typography
+   ============================== */
+/*
+ * 3.1 Typography common styles
+ */
+body {
+  font-family: "Karla", arial, sans-serif;
+  font-size: 16px;
+  line-height: 30px;
+  color: #666666;
+  min-width: 320px; }
+
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1.4;
+  margin: 0 0 20px;
+  font-family: "Roboto Slab", serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000000; }
+
+h1, h2, h3 {
+  letter-spacing: 0.2em; }
+
+a {
+  color: #000000; }
+  a:hover, a:focus {
+    color: #333333;
+    text-decoration: none; }
+
+.font-light {
+  font-weight: 300; }
+
+.font-black {
+  font-weight: 900; }
+
+/* ==============================
+   4. Forms fields
+   ============================== */
+input[type=email],
+input[type=password],
+input[type=phone],
+input[type=tel],
+input[type=text],
+textarea {
+  border: 2px solid #ebebeb;
+  color: #999999;
+  padding: 6px 12px;
+  height: 40px;
+  background: none;
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  -khtml-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -khtml-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  -webkit-transition: none;
+  -khtml-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+  transition: none;
+  width: 100%; }
+  input[type=email]:focus,
+  input[type=password]:focus,
+  input[type=phone]:focus,
+  input[type=tel]:focus,
+  input[type=text]:focus,
+  textarea:focus {
+    -webkit-box-shadow: none;
+    -khtml-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none;
+    border-color: #999999;
+    outline: 0;
+    color: #999999; }
+
+textarea {
+  height: auto; }
+
+input[type=email].input-bg,
+input[type=password].input-bg,
+input[type=phone].input-bg,
+input[type=tel].input-bg,
+input[type=text].input-bg,
+textarea.input-bg {
+  background: #f6f6f6;
+  border: 1px solid #f0f0f0;
+  font-size: 12px;
+  letter-spacing: 0.075em; }
+
+select {
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  width: 100%;
+  height: 40px;
+  line-height: 1.42857;
+  padding: 6px 12px;
+  border: 1px solid #f0f0f0;
+  background: #f6f6f6;
+  cursor: pointer;
+  color: #999999; }
+
+select:not([multiple]) {
+  -webkit-box-shadow: none;
+  -khtml-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none;
+  -webkit-appearance: none;
+  -khtml-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+  background: #f6f6f6 url(../images/selectbox-arrow.png) no-repeat right center; }
+
+.form-control {
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  -khtml-box-shadow: none;
+  -moz-box-shadow: none;
+  -ms-box-shadow: none;
+  -o-box-shadow: none;
+  box-shadow: none; }
+  .form-control :focus {
+    -webkit-box-shadow: none;
+    -khtml-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none; }
+
+/* ==============================
+   5. Buttons
+   ============================== */
+.btn {
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
+  border: 2px solid transparent;
+  display: inline-block;
+  line-height: 1.42857;
+  padding: 8px 26px;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  font-family: "Karla", sans-serif;
+  /* Button size */
+  /* Button shapes */
+  /* Button icon */
+  /* Button style */ }
+  .btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: none; }
+  .btn.active, .btn:active {
+    -webkit-box-shadow: none;
+    -khtml-box-shadow: none;
+    -moz-box-shadow: none;
+    -ms-box-shadow: none;
+    -o-box-shadow: none;
+    box-shadow: none; }
+  .btn.btn-xs {
+    padding: 6px 10px;
+    font-size: 8px; }
+  .btn.btn-sm {
+    padding: 8px 20px;
+    font-size: 10px; }
+  .btn.btn-lg {
+    padding: 10px 60px;
+    font-size: 18px; }
+  .btn.btn-xlg {
+    padding: 12px 65px;
+    font-size: 20px; }
+  .btn.btn-round {
+    border-radius: 3px; }
+  .btn.btn-circle {
+    border-radius: 30px; }
+  .btn.button-icon-left {
+    margin-right: 5px; }
+  .btn.button-icon-right {
+    margin-left: 5px; }
+  .btn.btn-default {
+    background: #000000;
+    color: #FFFFFF;
+    border-color: #000000; }
+  .btn.btn-animation span {
+    -webkit-transform: translateX(0);
+    -khtml-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-transition: all .3s ease-in-out 0s;
+    -khtml-transition: all .3s ease-in-out 0s;
+    -moz-transition: all .3s ease-in-out 0s;
+    -ms-transition: all .3s ease-in-out 0s;
+    -o-transition: all .3s ease-in-out 0s;
+    transition: all .3s ease-in-out 0s;
+    display: block;
+    position: relative; }
+    .btn.btn-animation span i {
+      filter: alpha(opacity=0);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      -webkit-opacity: 0;
+      -khtml-opacity: 0;
+      -moz-opacity: 0;
+      -ms-opacity: 0;
+      -o-opacity: 0;
+      opacity: 0;
+      -webkit-transition: all .3s ease-in-out 0s;
+      -khtml-transition: all .3s ease-in-out 0s;
+      -moz-transition: all .3s ease-in-out 0s;
+      -ms-transition: all .3s ease-in-out 0s;
+      -o-transition: all .3s ease-in-out 0s;
+      transition: all .3s ease-in-out 0s;
+      -webkit-transform: translate(30px, -50%);
+      -khtml-transform: translate(30px, -50%);
+      -moz-transform: translate(30px, -50%);
+      -ms-transform: translate(30px, -50%);
+      -o-transform: translate(30px, -50%);
+      transform: translate(30px, -50%);
+      position: absolute;
+      right: 0;
+      top: 50%; }
+  .btn.btn-animation:hover span {
+    -webkit-transform: translateX(-10px);
+    -khtml-transform: translateX(-10px);
+    -moz-transform: translateX(-10px);
+    -ms-transform: translateX(-10px);
+    -o-transform: translateX(-10px);
+    transform: translateX(-10px); }
+    .btn.btn-animation:hover span i {
+      filter: alpha(opacity=100);
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+      -webkit-opacity: 1;
+      -khtml-opacity: 1;
+      -moz-opacity: 1;
+      -ms-opacity: 1;
+      -o-opacity: 1;
+      opacity: 1; }
+  .btn.btn-gray {
+    background: #f6f6f6;
+    color: #666666;
+    border-color: #f6f6f6; }
+    .btn.btn-gray:hover {
+      background: #000000;
+      color: #FFFFFF;
+      border-color: #000000; }
+  .btn.btn-light {
+    border-color: #FFFFFF;
+    background: #FFFFFF;
+    color: #000000; }
+    .btn.btn-light:hover {
+      background: #000000;
+      color: #FFFFFF;
+      border-color: #000000; }
+  .btn.btn-dark-b {
+    background: none;
+    color: #000000;
+    border-color: #000000; }
+  .btn.btn-light-b {
+    border: 2px solid #FFFFFF;
+    background: none;
+    font-family: "Karla", arial, sans-serif;
+    font-weight: normal;
+    color: #FFFFFF; }
+    .btn.btn-light-b:hover {
+      background: #FFFFFF;
+      color: #000000; }
+  .btn.btn-medium {
+    background: #f6f6f6;
+    border: 1px solid #f0f0f0;
+    color: #000;
+    font-weight: bold;
+    letter-spacing: 0.2em; }
+    .btn.btn-medium:hover {
+      background: #000000;
+      border-color: #000000;
+      color: #fff; }
+  .btn.btn-addtocart {
+    background: #ffffff;
+    color: #000000;
+    width: 100%;
+    height: 48px;
+    font-size: 14px;
+    border-color: #ffffff;
+    padding: 0 45px;
+    line-height: 44px; }
+    .btn.btn-addtocart:hover {
+      background: #000000;
+      color: #FFFFFF;
+      border-color: #000000; }
+  .btn.btn-addtocart-b {
+    background: none;
+    color: #000000;
+    height: 48px;
+    font-size: 14px;
+    border-color: #000000;
+    padding: 0 45px;
+    line-height: 44px; }
+    .btn.btn-addtocart-b:hover {
+      background: #000000;
+      color: #FFFFFF;
+      border-color: #000000; }
+  .btn.btn-default:hover, .btn.btn-dark-b:hover {
+    background: #000000;
+    color: #FFFFFF;
+    border-color: #000000; }
+
 /*# sourceMappingURL=style.css.map */
