--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -13,40 +13,27 @@
 
 //// 1. Fonts ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-$font-stack: 'Karla',arial,sans-serif;
-$heading-font: 'Roboto Slab', serif;
-$button-text: 'Karla', sans-serif;
+
+$font-stack: 'Poppins', sans-serif;
+$heading-font: 'Josefin Slab', serif;
+$button-text: 'Poppins', sans-serif;
 $second-font: 'Montserrat', sans-serif;
-$three-font: 'Crete Round', serif;
-$four-font: 'Vollkorn', serif;
 
 
 //// 2. Color codes ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-$primary-color: #000000;
+// #ed727c, #ec6aec
+
+$primary-color: #82c14f;
 $primary-light-color: lighten($primary-color, 20%);
 
-$gray-bg: #f6f6f6;
-$gray-text: #999999;
-$gray-darker: #666666;
-$orange : #ed8b5c;
-$border-color: #ebebeb;
+$main-text: #707070;
+$title-text: #252525;
 
+$border-color: #e5e5e5;
+$nav-bg: #1e1e1e;
 
-//// 3. Header height ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+$black: #000000;
+$white: #FFFFFF;
+$gray: #c5c5c5;
 
-$topbar-height: 57px;
-$navbar-height: 102px;
-$navbar-height-mobile: 80px;
-$navbar-height-sticky: 60px;
-
-
-//// 4. Hamburger ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-$hamburger-heighticon: 12px;
-$hamburger-widthline: 20px;
-$hamburger-heightline: 2px;
-
-$hamburger-transition-time: 0.4s;
-$hamburger-rotation: 45deg;
-$hamburger-translateY: ($hamburger-heighticon / 2);
-$hamburger-translateX: 0;
