--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -29,6 +29,7 @@ $primary-light-color: lighten($primary-color, 20%);
 
 $main-text: #707070;
 $title-text: #252525;
+$tool-font: #636363;
 
 $border-color: #e5e5e5;
 $nav-bg: #1e1e1e;
